# ci

./: CMakeLists.txt
.azure/: .codecov.yml.swp  coverity-scan.yml
.azure/templates/: build-test.yml
build.windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  CycloneDDS-CXX.sln  CycloneDDS-CXXConfig.cmake  CycloneDDS-CXXVersion.cmake  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
build.windows/Testing/: TAG
build.windows/Testing/20210514-1825/: Test.xml
build.windows/Testing/Temporary/: CTestCostData.txt
build.windows/lib/: ddscxx.exp  ddscxx.lib  idlcxx.exp  idlcxx.lib
build.windows/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build.windows/src/ddscxx/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  ddscxx.vcxproj  ddscxx.vcxproj.filters
build.windows/src/idlcxx/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  (+4 more)
docs/manual/: idlcxx.rst
src/: bar.c  bar.cpp  bar.h  baz.c  baz.h  foo.c  foo.cpp
(+66 files in other folders)
